actualización de email y estados de contacto

--- a/themes/raymiled-theme/assets/styles/source/_nosotros.sass
+++ b/themes/raymiled-theme/assets/styles/source/_nosotros.sass
@@ -16,13 +16,16 @@
 		margin : 0
 
 	//Title
-	h2.title 
+	.title 
 		color      : rgba(255,255,255,.8)
 		font-family: "Open Sans", sans-serif
 		font-size  : 45px 
 		font-weight: 300 
 		line-height: 1.3em
 		margin     : 0 auto 25px
+	//Variante
+	.title--gray
+		color : gray
 
 	//Párrafos
 	p , ul 
