--- a/themes/raymiled-theme/assets/styles/source/_header.sass
+++ b/themes/raymiled-theme/assets/styles/source/_header.sass
@@ -74,7 +74,7 @@ nav.mainNavigation
 					z-index   : 99999999999
 				//Link
 				a 
-					color : #15B4AA
+					color : #00CEF1
 
 		//Submenu
 		&.sub-menu 
