--- a/themes/raymiled-theme/assets/styles/source/_services.sass
+++ b/themes/raymiled-theme/assets/styles/source/_services.sass
@@ -85,15 +85,14 @@
 
 /** CONTENEDOR SINGLE SERVICIO **/
 .mainContainerService
+	padding : 60px 0
 
 	//Imágen destacada
 	figure.featured-image
-		+box-shadow( -150px 0px 80px 0px #fff inset )
 		background-repeat: no-repeat
-		height           : 600px
-		margin           : 0 
-		max-width        : 820px
-		width            : 100%
+		background-size  : cover 
+		height           : 400px
+		margin           : 0 20px 0 0
 
 	//Sobrescribir título
 	.titleCommon__section
@@ -102,12 +101,11 @@
 	//Texto
 	.container-text
 		color      : #898989
-		font-family: "Montserrat" , sans-serif
+		font-family: "Open Sans" , sans-serif
 		font-size  : 14px
-		max-width  : 490px
-		padding    : 50px 0 0
-		position   : absolute
-		right      : 6%
-		top        : 0
-		width      : 100%
 
+/*
+ * PÁGINA OTROS SERVICIOS 
+ */
+
+ /* Contenedor Principal */
