actualizacion de estilos

--- a/themes/raymiled-theme/assets/styles/source/_common.sass
+++ b/themes/raymiled-theme/assets/styles/source/_common.sass
@@ -51,11 +51,12 @@ img.aligncenter, img.alignright, img.alignleft
 //==> CONTENEDOR COMUN EN PÁGINAS 
 // QUE TIENEN CAROUSEL 
 .containerBgAndCarousel
-	background-size: cover !important
-	margin         : 90px 0 0
-	min-height     : 527px
-	overflow       : hidden 
-	padding        : 0 0 50px
+	background-repeat: no-repeat
+	background-size  : contain
+	margin           : 90px 0 0
+	min-height       : 527px
+	overflow         : hidden 
+	padding          : 0 0 50px
 
 	//Contenido de la sección
 	.content-information
@@ -114,9 +115,9 @@ img.aligncenter, img.alignright, img.alignleft
 		align-items    : center
 		bottom         : 0
 		display        : flex
-		font-family    : "Montserrat" , sans-serif
+		font-family    : "Open Sans" , sans-serif
 		font-size      : 40px 
-		font-weight    : 600
+		font-weight    : 500
 		justify-content: center
 		left           : 0 
 		margin         : 0
@@ -167,6 +168,7 @@ img.aligncenter, img.alignright, img.alignleft
 	box-sizing      : border-box
 	color           : white
 	display         : inline-block
+	font-family     : "Arial" , sans-serif
 	font-size       : 15px
 	font-style      : normal
 	line-height     : 1em
