--- a/themes/raymiled-theme/assets/styles/source/_nosotros.sass
+++ b/themes/raymiled-theme/assets/styles/source/_nosotros.sass
@@ -8,7 +8,7 @@
  */
 
 #sectionAboutUs
-	font-family: "Arial" , sans-serif 
+	font-family: "Open Sans" , sans-serif 
 	padding    : 40px 0
 
 	//Imagenes
