--- a/themes/raymiled-theme/assets/styles/source/_promotions.sass
+++ b/themes/raymiled-theme/assets/styles/source/_promotions.sass
@@ -5,4 +5,4 @@
 
 //Contenedor
 #sectionContainerPromotions
-	background : url('../../images/backgrounds/promociones_fondo.png') no-repeat
+	background-image : url('../../images/backgrounds/promociones_fondo.png') 
