--- a/themes/raymiled-theme/assets/styles/source/_blog.sass
+++ b/themes/raymiled-theme/assets/styles/source/_blog.sass
@@ -60,10 +60,13 @@ article.itemPreviewPost
 
 	//Sobreescribir item preview
 	.itemPreviewPost
-		border   : 1px solid #EFEFEF
-		margin   : 0 5px 25px 0
-		max-width: calc( (100%/3) - ((2*5px)/3) )
-		width    : 100%
+		background: transparent 
+		border    : 1px solid #EFEFEF
+		color     : black 
+		margin    : 0 5px 25px 0
+		max-width : calc( (100%/3) - ((2*5px)/3) )
+		width     : 100%
+
 		//Tercer y ultimo elemento
 		&:last-child , &:nth-child(3)
 			margin-right: 0
