--- a/themes/raymiled-theme/assets/styles/source/_common.sass
+++ b/themes/raymiled-theme/assets/styles/source/_common.sass
@@ -236,14 +236,13 @@ img.aligncenter, img.alignright, img.alignleft
 	margin     : 0 auto 25px
 	position   : relative
 	&:after 
-		border  : 1px dotted rgba(255,255,255,.2)
 		content : ""
 		left    : 0 
 		position: absolute 
 		right   : 0
 		top     : 50%
 	span 
-		background: #2D250F
+		background: transparent
 		display   : inline-block
 		padding   : 0 25px
 		position  : relative
